# inventory_test

./: .gitignore  README.md  main.go
mcp/: go.mod  go.sum
mcp/cmd/mcpserver/: main.go
mcp/internal/app/: config.go  mcpserver.go
mcp/internal/mcp_logger/: mcp_logger.go  wrappedlogger.go
mcp/scripts/public/: build.go
rs/: .gitignore  Cargo.toml
rs/scripts/public/: build.rs
rs/src/: cli.rs  commands.rs  config.rs  db_schema.sql  main.rs  regex_rust.rs  structs.rs
shared/go/: go.mod  json_handlers.go  program.go
shared/go/wtlogger/: wtlog.go
shared/go/xdg/: xdg.go
src/: main.rs
static/: app.js  index.html  styles.css
web/: .gitignore  go.mod  main.go
web/scripts/public/: build.go
web/static/: app.js  index.html  styles.css
