[package]
name = "inventory_manager_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
